gcc/testsuite/g++.dg/cpp0x/udlit-tmpl-arg-neg.C
// { dg-do compile { target c++11 } }

template<char...>
  int operator"" _xyz(unsigned long long);	// { dg-error "has invalid argument list" }
